--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,322 @@
     transform: rotate(360deg);
   }
 }
+.panel {
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	position: relative;
+	background-color: #fff;
+	-webkit-box-shadow: 0px 0px 13px 0px rgba(62, 44, 90, 0.08);
+	box-shadow: 0px 0px 13px 0px rgba(62, 44, 90, 0.08);
+	margin-bottom: 1.5rem;
+	border-radius: 4px;
+	border: 1px solid rgba(0, 0, 0, 0.09);
+	border-bottom: 1px solid #e0e0e0;
+	-webkit-transition: border 500ms ease-out;
+	transition: border 500ms ease-out;
+  margin-bottom: 1.5rem;
+}
+.panel-hdr {
+	/* display: -webkit-box; */
+	/* display: -ms-flexbox; */
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	background: #fff;
+	min-height: 3rem;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.07);
+	border-radius: 4px 4px 0 0;
+	-webkit-transition: background-color 0.4s ease-out;
+	transition: background-color 0.4s ease-out;
+}
+.panel-hdr > :last-child {
+	padding-right: 1rem;
+  padding-left: 1rem;
+}
+.panel-hdr h2 {
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
+	flex: 1;
+	font-size: 0.875rem;
+	margin: 0;
+	/* display: -webkit-box; */
+	/* display: -ms-flexbox; */
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	line-height: 3rem;
+	/* color: inherit; */
+	color: #333;
+	position: relative;
+	font-weight: 500;
+}
+span#lblContent {
+	color: #175ca9;
+	font-weight: 700;
+	font-size: 16px;
+}
+.panel .panel-container {
+	position: relative;
+	border-radius: 0 0 4px 4px;
+  padding: 1rem;
+}
+
+.fc-toolbar.fc-header-toolbar {
+	margin-bottom: 1em;
+}
+.fc-toolbar .fc-left {
+	float: left;
+}
+.fc-toolbar .fc-right {
+	float: right;
+}
+.fc-toolbar .fc-center {
+	display: inline-block;
+}
+.fc-clear {
+	clear: both;
+}
+.fc .fc-toolbar > * > :first-child {
+	margin-left: 0;
+}
+.fc .fc-toolbar > * > * {
+	float: left;
+	margin-left: .75em;
+}
+.fc .fc-toolbar > * > :first-child {
+	margin-left: 0;
+}
+.fc-toolbar {
+	display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+}
+.fc th, .fc-basic-view td.fc-week-number, .fc-icon, .fc-toolbar {
+	text-align: center;
+}
+.fc-button-group {
+	position: relative;
+	display: inline-flex;
+	vertical-align: middle;
+}
+.fc button {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	height: 2.1em;
+	padding: 0 .6em;
+	font-size: 1em;
+	white-space: nowrap;
+	cursor: pointer;
+}
+.fc-state-default {
+	border: 1px solid;
+	background-color: #f5f5f5;
+	/* background-image: -moz-linear-gradient(top,#fff,#e6e6e6); */
+	/* background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6)); */
+	/* background-image: -webkit-linear-gradient(top,#fff,#e6e6e6); */
+	/* background-image: -o-linear-gradient(top,#fff,#e6e6e6); */
+	background-image: linear-gradient(to bottom,#fff,#e6e6e6);
+	background-repeat: repeat-x;
+	/* border-color: #e6e6e6 #e6e6e6 #bfbfbf; */
+	border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
+	color: #333;
+	text-shadow: 0 1px 1px rgba(255,255,255,.75);
+	box-shadow: inset 0 1px 0 rgba(255,255,255,.2),0 1px 2px rgba(0,0,0,.05);
+}
+.fc-button {
+	display: inline-block;
+	font-weight: 400;
+	color: #212529;
+	text-align: center;
+	vertical-align: middle;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-color: transparent;
+	border: 1px solid transparent;
+	padding: 0.4em 0.65em;
+	font-size: 1em;
+	line-height: 1.5;
+	border-radius: 0.25em;
+}
+.fc button .fc-icon {
+	position: relative;
+	top: -.05em;
+	margin: 0 .2em;
+	vertical-align: middle;
+  font-size: 1.5em;
+}
+.fc-icon {
+	height: 1em;
+	line-height: 1em;
+	overflow: hidden;
+	font-family: "Courier New",Courier,monospace;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.fc th, .fc-basic-view td.fc-week-number, .fc-icon, .fc-toolbar {
+	text-align: center;
+}
+.fc-button-group, .fc-icon {
+	display: inline-block;
+}
+
+.fc-icon {
+	font-family: "fcicons" !important;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+  width: 1em;
+
+}
+.fc-icon-left-single-arrow::after {
+	content: "\02039";
+	font-weight: 700;
+	font-size: 200%;
+	top: -7%;
+}
+.fc-icon::after {
+	position: relative;
+}
+.fc-icon-right-single-arrow::after {
+	content: "\0203A";
+	font-weight: 700;
+	font-size: 200%;
+	top: -7%;
+}
+.fc .fc-button-group > :first-child {
+	margin-left: 0;
+}
+.fc-button-group > .fc-button:not(:last-child) {
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+.fc .fc-button-group > * {
+	float: left;
+	margin: 0 0 0 -1px;
+}
+.fc-state-default.fc-corner-left {
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+.fc-toolbar h2 {
+	font-size: 1rem;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+
+/* my diary content */
+.fc-view-container {
+	position: relative;
+}
+.fc-view, .fc-view > table {
+	position: relative;
+	z-index: 1;
+}
+.fc-unthemed .fc-content, .fc-unthemed .fc-divider, .fc-unthemed .fc-list-heading td, .fc-unthemed .fc-list-view, .fc-unthemed .fc-popover, .fc-unthemed .fc-row, .fc-unthemed tbody, .fc-unthemed td, .fc-unthemed th, .fc-unthemed thead {
+	border-color: #ddd;
+}
+.fc td, .fc th {
+	border-style: solid;
+	border-width: 1px;
+	padding: 0;
+	vertical-align: top;
+}
+.fc .fc-row {
+	border-style: solid;
+	border-width: 0;
+}
+.fc td, .fc th {
+	border-style: solid;
+	border-width: 1px;
+	padding: 0;
+	vertical-align: top;
+}
+element {
+	overflow: hidden;
+	height: 377.883px;
+}
+.fc-scroller > .fc-day-grid, .fc-scroller > .fc-time-grid {
+	position: relative;
+	width: 100%;
+}
+
+.fc-basic-view .fc-body .fc-row {
+	min-height: 4em;
+}
+.fc-day-grid .fc-row {
+	z-index: 1;
+}
+.fc-row.fc-rigid, .fc-time-grid-event {
+	overflow: hidden;
+}
+.fc-row .fc-bg {
+	z-index: 1;
+}
+.fc td.fc-today {
+	border-style: double;
+}
+.fc-unthemed td.fc-today {
+	background: #fcf8e3;
+}
+.fc-row.fc-rigid .fc-content-skeleton {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+.fc-row .fc-highlight-skeleton {
+	z-index: 3;
+}
+.fc-bg, .fc-row .fc-bgevent-skeleton, .fc-row .fc-highlight-skeleton {
+	bottom: 0;
+}
+.fc-bg, .fc-bgevent-skeleton, .fc-helper-skeleton, .fc-highlight-skeleton {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+.fc table {
+	border-collapse: collapse;
+	border-spacing: 0;
+	font-size: 1em;
+}
+.fc-row {
+	position: relative;
+}
+.fc table {
+	width: 100%;
+	box-sizing: border-box;
+	table-layout: fixed;
+	border-collapse: collapse;
+	border-spacing: 0;
+	font-size: 1em;
+}
+
+.fc-bg table, .fc-row .fc-bgevent-skeleton table, .fc-row .fc-highlight-skeleton table {
+	height: 100%;
+}
+.fc-highlight {
+	background: #bce8f1;
+	opacity: .3;
+}
+.fc-day-header > span {
+  font-size: 13px;
+  font-weight: 500;
+}
