--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,43 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(360deg);
+	}
 }
+
 .panel {
 	display: flex;
 	-webkit-box-orient: vertical;
@@ -52,8 +54,9 @@
 	border-bottom: 1px solid #e0e0e0;
 	-webkit-transition: border 500ms ease-out;
 	transition: border 500ms ease-out;
-  margin-bottom: 1.5rem;
+	margin-bottom: 1.5rem;
 }
+
 .panel-hdr {
 	/* display: -webkit-box; */
 	/* display: -ms-flexbox; */
@@ -68,10 +71,12 @@
 	-webkit-transition: background-color 0.4s ease-out;
 	transition: background-color 0.4s ease-out;
 }
-.panel-hdr > :last-child {
+
+.panel-hdr> :last-child {
 	padding-right: 1rem;
-  padding-left: 1rem;
+	padding-left: 1rem;
 }
+
 .panel-hdr h2 {
 	-webkit-box-flex: 1;
 	-ms-flex: 1;
@@ -90,42 +95,52 @@
 	position: relative;
 	font-weight: 500;
 }
+
 span#lblContent {
 	color: #175ca9;
 	font-weight: 700;
 	font-size: 16px;
 }
+
 .panel .panel-container {
 	position: relative;
 	border-radius: 0 0 4px 4px;
-  padding: 1rem;
+	padding: 1rem;
 }
 
 .fc-toolbar.fc-header-toolbar {
 	margin-bottom: 1em;
 }
+
 .fc-toolbar .fc-left {
 	float: left;
 }
+
 .fc-toolbar .fc-right {
 	float: right;
 }
+
 .fc-toolbar .fc-center {
 	display: inline-block;
 }
+
 .fc-clear {
 	clear: both;
 }
-.fc .fc-toolbar > * > :first-child {
+
+.fc .fc-toolbar>*> :first-child {
 	margin-left: 0;
 }
-.fc .fc-toolbar > * > * {
+
+.fc .fc-toolbar>*>* {
 	float: left;
 	margin-left: .75em;
 }
-.fc .fc-toolbar > * > :first-child {
+
+.fc .fc-toolbar>*> :first-child {
 	margin-left: 0;
 }
+
 .fc-toolbar {
 	display: flex;
 	-webkit-box-pack: justify;
@@ -135,14 +150,20 @@ span#lblContent {
 	-ms-flex-align: center;
 	align-items: center;
 }
-.fc th, .fc-basic-view td.fc-week-number, .fc-icon, .fc-toolbar {
+
+.fc th,
+.fc-basic-view td.fc-week-number,
+.fc-icon,
+.fc-toolbar {
 	text-align: center;
 }
+
 .fc-button-group {
 	position: relative;
 	display: inline-flex;
 	vertical-align: middle;
 }
+
 .fc button {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -154,6 +175,7 @@ span#lblContent {
 	white-space: nowrap;
 	cursor: pointer;
 }
+
 .fc-state-default {
 	border: 1px solid;
 	background-color: #f5f5f5;
@@ -161,14 +183,15 @@ span#lblContent {
 	/* background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6)); */
 	/* background-image: -webkit-linear-gradient(top,#fff,#e6e6e6); */
 	/* background-image: -o-linear-gradient(top,#fff,#e6e6e6); */
-	background-image: linear-gradient(to bottom,#fff,#e6e6e6);
+	background-image: linear-gradient(to bottom, #fff, #e6e6e6);
 	background-repeat: repeat-x;
 	/* border-color: #e6e6e6 #e6e6e6 #bfbfbf; */
-	border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
+	border-color: rgba(0, 0, 0, .1) rgba(0, 0, 0, .1) rgba(0, 0, 0, .25);
 	color: #333;
-	text-shadow: 0 1px 1px rgba(255,255,255,.75);
-	box-shadow: inset 0 1px 0 rgba(255,255,255,.2),0 1px 2px rgba(0,0,0,.05);
+	text-shadow: 0 1px 1px rgba(255, 255, 255, .75);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .2), 0 1px 2px rgba(0, 0, 0, .05);
 }
+
 .fc-button {
 	display: inline-block;
 	font-weight: 400;
@@ -186,27 +209,35 @@ span#lblContent {
 	line-height: 1.5;
 	border-radius: 0.25em;
 }
+
 .fc button .fc-icon {
 	position: relative;
 	top: -.05em;
 	margin: 0 .2em;
 	vertical-align: middle;
-  font-size: 1.5em;
+	font-size: 1.5em;
 }
+
 .fc-icon {
 	height: 1em;
 	line-height: 1em;
 	overflow: hidden;
-	font-family: "Courier New",Courier,monospace;
+	font-family: "Courier New", Courier, monospace;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 }
-.fc th, .fc-basic-view td.fc-week-number, .fc-icon, .fc-toolbar {
+
+.fc th,
+.fc-basic-view td.fc-week-number,
+.fc-icon,
+.fc-toolbar {
 	text-align: center;
 }
-.fc-button-group, .fc-icon {
+
+.fc-button-group,
+.fc-icon {
 	display: inline-block;
 }
 
@@ -216,39 +247,47 @@ span#lblContent {
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-  width: 1em;
+	width: 1em;
 
 }
+
 .fc-icon-left-single-arrow::after {
 	content: "\02039";
 	font-weight: 700;
 	font-size: 200%;
 	top: -7%;
 }
+
 .fc-icon::after {
 	position: relative;
 }
+
 .fc-icon-right-single-arrow::after {
 	content: "\0203A";
 	font-weight: 700;
 	font-size: 200%;
 	top: -7%;
 }
-.fc .fc-button-group > :first-child {
+
+.fc .fc-button-group> :first-child {
 	margin-left: 0;
 }
-.fc-button-group > .fc-button:not(:last-child) {
+
+.fc-button-group>.fc-button:not(:last-child) {
 	border-top-right-radius: 0;
 	border-bottom-right-radius: 0;
 }
-.fc .fc-button-group > * {
+
+.fc .fc-button-group>* {
 	float: left;
 	margin: 0 0 0 -1px;
 }
+
 .fc-state-default.fc-corner-left {
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
+
 .fc-toolbar h2 {
 	font-size: 1rem;
 	font-weight: 500;
@@ -259,34 +298,54 @@ span#lblContent {
 .fc-view-container {
 	position: relative;
 }
-.fc-view, .fc-view > table {
+
+.fc-view,
+.fc-view>table {
 	position: relative;
 	z-index: 1;
 }
-.fc-unthemed .fc-content, .fc-unthemed .fc-divider, .fc-unthemed .fc-list-heading td, .fc-unthemed .fc-list-view, .fc-unthemed .fc-popover, .fc-unthemed .fc-row, .fc-unthemed tbody, .fc-unthemed td, .fc-unthemed th, .fc-unthemed thead {
+
+.fc-unthemed .fc-content,
+.fc-unthemed .fc-divider,
+.fc-unthemed .fc-list-heading td,
+.fc-unthemed .fc-list-view,
+.fc-unthemed .fc-popover,
+.fc-unthemed .fc-row,
+.fc-unthemed tbody,
+.fc-unthemed td,
+.fc-unthemed th,
+.fc-unthemed thead {
 	border-color: #ddd;
 }
-.fc td, .fc th {
+
+.fc td,
+.fc th {
 	border-style: solid;
 	border-width: 1px;
 	padding: 0;
 	vertical-align: top;
 }
+
 .fc .fc-row {
 	border-style: solid;
 	border-width: 0;
 }
-.fc td, .fc th {
+
+.fc td,
+.fc th {
 	border-style: solid;
 	border-width: 1px;
 	padding: 0;
 	vertical-align: top;
 }
+
 element {
 	overflow: hidden;
 	height: 377.883px;
 }
-.fc-scroller > .fc-day-grid, .fc-scroller > .fc-time-grid {
+
+.fc-scroller>.fc-day-grid,
+.fc-scroller>.fc-time-grid {
 	position: relative;
 	width: 100%;
 }
@@ -294,47 +353,65 @@ element {
 .fc-basic-view .fc-body .fc-row {
 	min-height: 4em;
 }
+
 .fc-day-grid .fc-row {
 	z-index: 1;
 }
-.fc-row.fc-rigid, .fc-time-grid-event {
+
+.fc-row.fc-rigid,
+.fc-time-grid-event {
 	overflow: hidden;
 }
+
 .fc-row .fc-bg {
 	z-index: 1;
 }
+
 .fc td.fc-today {
 	border-style: double;
 }
+
 .fc-unthemed td.fc-today {
 	background: #fcf8e3;
 }
+
 .fc-row.fc-rigid .fc-content-skeleton {
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 }
+
 .fc-row .fc-highlight-skeleton {
 	z-index: 3;
 }
-.fc-bg, .fc-row .fc-bgevent-skeleton, .fc-row .fc-highlight-skeleton {
+
+.fc-bg,
+.fc-row .fc-bgevent-skeleton,
+.fc-row .fc-highlight-skeleton {
 	bottom: 0;
 }
-.fc-bg, .fc-bgevent-skeleton, .fc-helper-skeleton, .fc-highlight-skeleton {
+
+.fc-bg,
+.fc-bgevent-skeleton,
+.fc-helper-skeleton,
+.fc-highlight-skeleton {
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
 }
+
 .fc table {
 	border-collapse: collapse;
 	border-spacing: 0;
 	font-size: 1em;
 }
+
 .fc-row {
 	position: relative;
 }
+
 .fc table {
 	width: 100%;
 	box-sizing: border-box;
@@ -344,24 +421,28 @@ element {
 	font-size: 1em;
 }
 
-.fc-bg table, .fc-row .fc-bgevent-skeleton table, .fc-row .fc-highlight-skeleton table {
+.fc-bg table,
+.fc-row .fc-bgevent-skeleton table,
+.fc-row .fc-highlight-skeleton table {
 	height: 100%;
 }
+
 .fc-highlight {
 	background: #bce8f1;
 	opacity: .3;
 }
-.fc-day-header > span {
-  font-size: 13px;
-  font-weight: 500;
+
+.fc-day-header>span {
+	font-size: 13px;
+	font-weight: 500;
 }
 
 .tab {
 	overflow: hidden;
 	border: 1px solid #ccc;
 	background-color: #e9edf5;
-  }
-  
+}
+
 .tab button {
 	background-color: inherit;
 	float: left;
@@ -371,21 +452,82 @@ element {
 	padding: 14px 16px;
 	transition: 0.3s;
 	font-size: 17px;
-	color:#175ca9;
-  }
+	color: #175ca9;
+}
 
-  .tab button:hover {
+.tab button:hover {
 	background-color: #bbd3f9;
-  }
-  .tab button.active {
+}
+
+.tab button.active {
 	background-color: #bbd3f9;
-  }
-  .tabcontent {
+}
+
+.tabcontent {
 	display: none;
 	padding: 6px 12px;
 	border: 1px solid #ccc;
 	border-top: none;
-  }
-  #tab1{
+}
+
+#tab1 {
 	display: block;
-  }
+}
+
+/* Drop Down start */
+.dropdown-check-list {
+	display: flex;
+	margin: 1rem;
+}
+
+.dropdown-check-list .anchor {
+	position: relative;
+	cursor: pointer;
+	display: inline-block;
+	padding: 5px 50px 5px 10px;
+	border: 1px solid #ccc;
+}
+
+.dropdown-check-list .anchor:after {
+	position: absolute;
+	content: "";
+	border-left: 2px solid black;
+	border-top: 2px solid black;
+	padding: 5px;
+	right: 10px;
+	top: 30%;
+	-moz-transform: rotate(-222deg);
+	-ms-transform: rotate(-222deg);
+	-o-transform: rotate(-222deg);
+	-webkit-transform: rotate(-222deg);
+	transform: rotate(-222deg);
+}
+
+.dropdown-check-list .anchor:active:after {
+	right: 8px;
+	top: 21%;
+}
+
+.dropdown-check-list ul.items {
+	padding: 2px;
+	display: none;
+	margin: 0;
+
+
+}
+
+.dropdown-check-list ul.items li {
+	list-style: none;
+}
+
+.dropdown-check-list.visible .anchor {
+	color: #0094ff;
+}
+
+.dropdown-check-list.visible .items {
+	display: flex;
+	column-gap: 2rem;
+	margin-left: 1rem;
+}
+
+/* Drop Down  */
